# pgtail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
pgtail/: __init__.py  cli.py  collapse.py  config.py  connection.py  events.py  filters.py  format.py  options.py  pgoutput.py  preflight.py  replication.py
project_management/: 001-done-project-scaffold.md  002-done-connection-and-cli-args.md  002-todo-connection-and-cli-args.md  003-done-preflight-wal-level-check.md  003-todo-preflight-wal-level-check.md  004-done-logical-replication-stream.md  004-todo-logical-replication-stream.md  005-done-event-formatting-and-colors.md  005-todo-event-formatting-and-colors.md  006-done-filters-and-redaction.md  006-todo-filters-and-redaction.md  007-done-large-txn-handling.md  007-todo-large-txn-handling.md  008-done-persistent-slot-mode.md  008-todo-persistent-slot-mode.md  009-done-config-file-support.md  009-todo-config-file-support.md  010-done-tests-and-ci.md  010-todo-tests-and-ci.md  011-done-docs-and-readme.md  011-todo-docs-and-readme.md  012-canceled-release-and-publish.md  013-backlog-tui-mode.md  014-backlog-value-level-filters.md  015-backlog-notifications.md  016-canceled-go-rewrite-single-binary.md  README.md
tests/: test_cli_args.py  test_collapse.py  test_config.py  test_drop_slot_cli.py  test_filters.py  test_format.py  test_integration.py  test_pgoutput.py  test_preflight.py  test_replication_helpers.py  test_smoke.py
